--- a/src/App.css
+++ b/src/App.css
@@ -94,7 +94,12 @@ h3 {
 }
 
 #content ol li, #content ol li ul li {
+  font-size: 14px;
   margin-bottom: 5px;
+}
+
+#content p {
+  font-size: 16px;
 }
 
 .container {
@@ -124,3 +129,17 @@ h3 {
   height: 350px;
   background: url('./images/dragon.jpg');
 }
+
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
+}
+.clearfix { display: inline-block; }
+/* start commented backslash hack \*/
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
+/* close commented backslash hack */
